--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -32,5 +32,95 @@ databaseChangeLog:
                   type: varchar(255)
                   constraints:
                     nullable: false
-                    
-                    
+  - changeSet:
+      id: candidate
+      author: kparkings
+      changes:
+        - createTable:
+            tableName: candidate
+            columns:
+              - column:
+                  name: candidate_id
+                  type: varchar
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: country
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: city
+                  type: varchar
+                  constraints:
+                    nullable: false 
+              - column:
+                  name: perm
+                  type: boolean
+                  constraints:
+                    nullable: false
+                    default: false
+              - column:
+                  name: freelance
+                  type: boolean
+                  constraints:
+                    nullable: false
+                    default: false
+              - column:
+                  name: years_experience
+                  type: tinyint
+                  constraints:
+                    nullable: false         
+              - column:
+                  name: available
+                  type: boolean
+                  constraints:
+                    nullable: false
+                    default: true         
+              - column:
+                  name: registered
+                  type: timestamp
+                  constraints:
+                    nullable: false
+              - column:
+                  name: last_availability_check
+                  type: timestamp
+                  constraints:
+                    nullable: false
+        - createTable:
+            tableName: candidate_skill
+            columns:
+              - column:
+                  name: candidate_id
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: skill
+                  type: varchar
+                  constraints:
+                    nullable: false                    
+                    foreignKeyName: fk_candidate_skill
+                    references: candidate(candidate_id)
+        - addPrimaryKey:  
+            columnNames:  candidate_id, skill  
+            constraintName:  pk_candidate_skill  
+            tableName:  candidate_skill  
+        - createTable:
+            tableName: candidate_language
+            columns:
+              - column:
+                  name: candidate_id
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: language
+                  type: varchar
+                  constraints:
+                    nullable: false
+        - addPrimaryKey:  
+            columnNames:  candidate_id, language  
+            constraintName:  pk_candidate_language  
+            tableName:  candidate_language  
