added partial candidate controller, service and dto objects for api

--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-
+## Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/recruitdb
 spring.datasource.username=recruitadmin
 spring.datasource.password=Fender1980
-
+## Liquibase
 spring.liquibase.enabled=true
+ble=true
