--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=Fender1980
 ## Liquibase
 spring.liquibase.enabled=true
 ble=true
+###
+# Security
+###
+jwt.secret=javainuse
+
