code tidy and schema split

--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -8,5 +8,8 @@ ble=true
 ###
 # Security
 ###
-jwt.secret=javainuse
+jwt.secret=javainuse2
+jwt.cookie.secure=false
+jtw.cookie.domain=127.0.0.1
+jwt.cookie.maxage=500000
 
