--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -156,3 +156,63 @@ databaseChangeLog:
             constraintName:  pk_candidate_language  
             tableName:  candidate_language  
             schemaName: candidate
+
+  - changeSet:
+      id: user_tables
+      author: kparkings
+      changes:
+        - createTable:
+            tableName: users
+            schemaName: users
+            columns:
+              - column:
+                  name: username
+                  type: varchar
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: password
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: enabled
+                  type: boolean
+                  constraints:
+                    default: false
+        - createTable:
+            tableName: user_roles
+            schemaName: users
+            columns:
+              - column:
+                  name: username
+                  type: varchar
+                  constraints:
+                    nullable: false                    
+              - column:
+                  name: role
+                  type: varchar
+                  constraints:
+                    nullable: false
+
+        - addPrimaryKey:  
+            columnNames:  username, role  
+            constraintName:  pk_user_roles  
+            tableName:  user_roles
+            schemaName: users
+
+  - changeSet:
+      id: user_fk
+      author: kparkings
+      changes:
+        - addForeignKeyConstraint:  
+            constraintName: fk_user_role_username
+            baseColumnNames: username
+            baseTableName: user_roles
+            baseTableSchemaName: users
+            referencedTableName: users
+            referencedTableSchemaName: users
+            referencedColumnNames: username  
+
+            
