--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.6.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
