--- a/recruit-gui/angular.json
+++ b/recruit-gui/angular.json
@@ -31,6 +31,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
