--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -11,18 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.4",
+    "@angular/animations": "^11.2.8",
+    "@angular/cdk": "^11.2.7",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
     "@angular/http": "^7.2.16",
+    "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "angular-font-awesome": "^3.1.2",
+    "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.6.0",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
