--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -12,4 +12,7 @@ jwt.secret=javainuse2
 jwt.cookie.secure=false
 jtw.cookie.domain=127.0.0.1
 jwt.cookie.maxage=500000
-
+###
+# Candidates CSV import
+###
+csv.import.active=false
