--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -63,6 +63,11 @@ databaseChangeLog:
                   constraints:
                     nullable: true
               - column:
+                  name: role_sought
+                  type: varchar
+                  constraints:
+                    nullable: true
+              - column:
                   name: function
                   type: varchar
                   constraints:
