--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -35,6 +35,12 @@
     		<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+    		<version>4.13.2</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-test</artifactId>
     		<scope>test</scope>
@@ -78,6 +84,23 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+    			<groupId>org.springframework.boot</groupId>
+    			<artifactId>spring-boot-maven-plugin</artifactId>
+    			<executions>
+        			<execution>
+            			<goals>
+                			<goal>repackage</goal>
+            			</goals>
+           				 <configuration>
+                			<classifier>spring-boot</classifier>
+                			<mainClass>
+                  				com.arenella.recruit.RecruitApplication
+                			</mainClass>
+            			</configuration>
+        			</execution>
+    			</executions>
 			</plugin>
 		</plugins>
 	</build>
