first semi prod release

--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -9,8 +9,8 @@ ble=true
 # Security
 ###
 jwt.secret=javainuse2
-jwt.cookie.secure=false
-jtw.cookie.domain=127.0.0.1
+jwt.cookie.secure=true
+jtw.cookie.domain=arenella-ict.wosah.nl
 jwt.cookie.maxage=500000
 ###
 # Candidates CSV import
