pdf file extension fix

--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -10,5 +10,5 @@ ble=true
 ###
 jwt.secret=javainuse2
 jwt.cookie.secure=true
-jtw.cookie.domain=arenella-ict.wosah.nl
+jtw.cookie.domain=arenella-ict.com
 jwt.cookie.maxage=500000
