--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -244,3 +244,38 @@ databaseChangeLog:
                   type: bytea
                   constraints:
                     nullable: false
+                    
+  - changeSet:
+      id: event_curriculum_downloaded_table
+      author: kparkings
+      changes:
+        - createTable:
+            tableName: event_curriculum_downloaded
+            schemaName: curriculum
+            columns:
+              - column:
+                  name: id
+                  type: varchar(36)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: curriculum_id
+                  type: varchar(10)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: user_id
+                  type: varchar
+                  constraints:
+                    nullable: false                   
+              - column:
+                  name: is_admin_user
+                  type: boolean
+                  constraints:
+                    nullable: false
+              - column:
+                  name: timestamp
+                  type: timestamp
+                  constraints:
+                    nullable: false
