--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -80,6 +80,12 @@
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>5.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+		<dependency>
+    		<groupId>org.apache.pdfbox</groupId>
+    		<artifactId>pdfbox</artifactId>
+    		<version>2.0.23</version>
+		</dependency>
 			
 	</dependencies>
 
