--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -410,7 +410,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: number
+                  type: uuid
                   constraints:
                     primaryKey: true
                     nullable: false
@@ -434,7 +434,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: pending_candidate_id
-                  type: bigint
+                  type: uuid
                   constraints:
                     primaryKey: true
                     nullable: false
