working create candidate

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -455,13 +455,13 @@ databaseChangeLog:
                     nullable: true
               - column:
                   name: perm
-                  type: VARCHAR(7)
+                  type: boolean
                   constraints:
                     nullable: false
                     default: false
               - column:
                   name: freelance
-                  type: VARCHAR(7)
+                  type: boolean
                   constraints:
                     nullable: false
                     default: false
