db schema change for listings

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -518,3 +518,115 @@ databaseChangeLog:
                   type: timestamp
                   constraints:
                     nullable: false
+
+  - changeSet:
+      id: listing_tables
+      author: kparkings
+      changes:
+        - createTable:
+            tableName: listing
+            schemaName: listings
+            columns:
+              - column:
+                  name: listing_id
+                  type: UUID
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: owner_id
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: owner_name
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: owner_email
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created
+                  type: timestamp
+                  constraints:
+                    nullable: false
+              - column:
+                  name: title
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: description
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: type
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: country
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: location
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: years_experience
+                  type: number
+                  constraints:
+                    nullable: false
+              - column:
+                  name: rate
+                  type: float
+                  constraints:
+                    nullable: false
+              - column:
+                  name: currency
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: views
+                  type: int
+                  constraints:
+                    nullable: false
+        - createTable:
+            tableName: listing_skill
+            schemaName: listings
+            columns:
+              - column:
+                  name: listing_id
+                  type: UUID
+                  constraints:
+                    nullable: false                    
+                    foreignKeyName: fk_listing_skill
+                    references: listings.listing(listing_id)
+              - column:
+                  name: skill
+                  type: varchar
+                  constraints:
+                    nullable: false
+        - createTable:
+            tableName: listing_language
+            schemaName: listings
+            columns:
+              - column:
+                  name: listing_id
+                  type: UUID
+                  constraints:
+                    nullable: false                    
+                    foreignKeyName: fk_listing_language
+                    references: listings.listing(listing_id)
+              - column:
+                  name: language
+                  type: varchar
+                  constraints:
+                    nullable: false
