Listing add Recruiter listing FE and BE

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -549,6 +549,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: owner_company
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
                   name: created
                   type: timestamp
                   constraints:
