--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -582,22 +582,22 @@ databaseChangeLog:
                   name: location
                   type: varchar
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: years_experience
                   type: number
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: rate
                   type: float
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: currency
                   type: varchar
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: views
                   type: int
