--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -572,12 +572,12 @@ databaseChangeLog:
                   name: type
                   type: varchar
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: country
                   type: varchar
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: location
                   type: varchar
