Listing edit and detials basic

--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -26,10 +26,11 @@
     "angular-font-awesome": "^3.1.2",
     "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.6.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "material-ui-flags": "^1.2.4",
     "ng2-charts": "^2.2.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
