float to string and create candidate page formatting

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -590,7 +590,7 @@ databaseChangeLog:
                     nullable: true
               - column:
                   name: rate
-                  type: float
+                  type: varchar
                   constraints:
                     nullable: true
               - column:
