--- a/recruit-gui/angular.json
+++ b/recruit-gui/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/custom-theme.scss",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/flag-icon-css/css/flag-icons.min.css"
             ],
             "scripts": [
               "node_modules/popper.js/dist/umd/popper.min.js",
